# rt_reverb

./: .gitignore  Build.Ps1  README.md  Run.Ps1  demo.html  index.html  readMe.md  styles.css
algorithm/: CMakeLists.txt
algorithm/src/: raytracing.c  raytracing.h
algorithm/src/geometry/: geometry.c  geometry.h
gui/: requirements.txt
gui/icons_projects/: add_listener.pixil  add_wall.pixil  delete.pixil  move.pixil  play.pixil  resize.pixil  rotate.pixil  select.pixil  select_v2.pixil  sound_source.pixil  sound_source_v2.pixil  stop.pixil
gui/src/: algorithm_handler.py  app.py  settings.py  styles.py
gui/src/assets/: materials.json
gui/src/audio/: audio_panel.py  audio_processing.py
gui/src/object_properties/: materials.py  properties_panel.py
gui/src/scene_graphics/: scene.py
gui/src/scene_graphics/objects/: clipping.py  graphic_objects.py  listener.py  sound_source.py  wall.py
gui/src/tools/: tool_button.py  tools.py  tools_panel.py
js/: sine.js  waves.js
